fix: display none
Vercel bug

--- a/pages/frontend/200.html
+++ b/pages/frontend/200.html
@@ -8,10 +8,11 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta name="description" content="Your request was successful.">
   <meta name="keywords" content="200, ok">
-  <link rel='stylesheet' type='text/css' media='screen' href='/styles/200.css'></link>
   <link rel="preload" href="/assets/wave_top.svg" as="image">
   <link rel="preload" href="/assets/wave_bottom.svg" as="image">
   <link rel="preload" href="/assets/connection_success.svg" as="image">
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/200.css'>
+  <script src="/backend/preload.js" defer></script>
 </head>
 
 <body>
