--- a/pages/frontend/429.html
+++ b/pages/frontend/429.html
@@ -8,11 +8,11 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta name="description" content="You sent to many requests.">
   <meta name="keywords" content="429, too many requests">
-  <link rel='stylesheet' type='text/css' media='screen' href='/styles/429.css'>
-  </link>
   <link rel="preload" href="/assets/wave_top.svg" as="image">
   <link rel="preload" href="/assets/wave_bottom.svg" as="image">
   <link rel="preload" href="/assets/connection_limted.svg" as="image">
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/429.css'>
+  <script src="/backend/preload.js" defer></script>
 </head>
 
 <body>
