--- a/pages/frontend/500.html
+++ b/pages/frontend/500.html
@@ -8,11 +8,11 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta name="description" content="The server encountered an internal error and was unable to complete your request.">
   <meta name="keywords" content="500, internal server error">
-  <link rel='stylesheet' type='text/css' media='screen' href='/styles/500.css'>
-  </link>
   <link rel="preload" href="/assets/wave_top.svg" as="image">
   <link rel="preload" href="/assets/wave_bottom.svg" as="image">
   <link rel="preload" href="/assets/connection_failed.svg" as="image">
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/500.css'>
+  <script src="/backend/preload.js" defer></script>
 </head>
 
 <body>
