--- a/pages/frontend/400.html
+++ b/pages/frontend/400.html
@@ -8,10 +8,11 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta name="description" content="Your request was denied by our server.">
   <meta name="keywords" content="400, bad request">
-  <link rel='stylesheet' type='text/css' media='screen' href='/styles/400.css'></link>
   <link rel="preload" href="/assets/wave_top.svg" as="image">
   <link rel="preload" href="/assets/wave_bottom.svg" as="image">
   <link rel="preload" href="/assets/connection_failed.svg" as="image">
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/400.css'>
+  <script src="/backend/preload.js" defer></script>
 </head>
 
 <body>
