--- a/pages/frontend/404.html
+++ b/pages/frontend/404.html
@@ -10,10 +10,10 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta name="description" content="The page you were looking for could not be found.">
   <meta name="keywords" content="404, not found">
-  <link rel='stylesheet' type='text/css' media='screen' href='/styles/404.css'>
-  </link>
   <link rel="preload" href="/assets/wave_top.svg" as="image">
   <link rel="preload" href="/assets/wave_bottom.svg" as="image">
+  <link rel='stylesheet' type='text/css' media='screen' href='/styles/404.css'>
+  <script src="/backend/preload.js" defer></script>
 </head>
 
 <body>
